# git-skill-indexer

./: CLAUDE.md  config.yaml  docker-compose.yml  mcp_bridge.py  pyproject.toml
src/: chunker.py  cli.py  cloner.py  config.py  embedder.py  github_client.py  indexer.py  server.py  store.py  sync.py
systemd/: git-skill-indexer-api.service  git-skill-indexer.service  git-skill-indexer.timer
tests/: test_chunker.py  test_embedder.py  test_sync.py
